plugins {
	id 'org.springframework.boot' version '3.2.3' apply false
	id 'io.spring.dependency-management' version '1.1.4' apply false
}

subprojects {
	apply plugin: 'java'
	apply plugin: 'io.spring.dependency-management'
	apply plugin: 'jacoco'

	group = 'com.pfplaybackend'
	version = '0.0.1-SNAPSHOT'
	sourceCompatibility = '17'

	repositories {
		mavenCentral()
	}

	dependencies {
		compileOnly 'org.projectlombok:lombok:1.18.22'
		annotationProcessor 'org.projectlombok:lombok:1.18.22'

		testImplementation 'org.springframework.boot:spring-boot-starter-test'
		testImplementation 'com.tngtech.archunit:archunit-junit5:1.2.1'
	}

	dependencyManagement {
		imports {
			mavenBom org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES
		}
	}

	tasks.withType(JavaCompile).configureEach {
		options.encoding = 'UTF-8'
		options.compilerArgs.add('-parameters')
	}

	tasks.named('test') {
		useJUnitPlatform()
		finalizedBy jacocoTestReport
	}

	jacocoTestReport {
		dependsOn test
		reports {
			html.required = true
			xml.required = true
			csv.required = false
		}
	}
}
